--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
     },
     "autoload": {
         "files" : [
-            "app/Helper/Helpers.php"
+            "app/Helper/Helpers.php",
+            "app/Helper/route.php"
         ],
         "psr-4": {
             "App\\": "app/",
